@@ -9,7 +9,7 @@
   iter,
   nsim,
   output_type = "full",
-  mcmc_type = "da",
+  mcmc_type = "is2",
   sampling_method = "psi",
   burnin = floor(iter/2),
   thin = 1,
@@ -41,11 +41,11 @@ and posterior samples of theta).}
 
 \item{mcmc_type}{What MCMC algorithm to use? Possible choices are
 \code{"pm"} for pseudo-marginal MCMC,
-\code{"da"} for delayed acceptance version of PMCMC (default), 
+\code{"da"} for delayed acceptance version of PMCMC , 
 \code{"approx"} for approximate inference based on the Gaussian approximation of the model,
 or one of the three importance sampling type weighting schemes:
 \code{"is3"} for simple importance sampling (weight is computed for each MCMC iteration independently),
-\code{"is2"} for jump chain importance sampling type weighting, or
+\code{"is2"} for jump chain importance sampling type weighting (default), or
 \code{"is1"} for importance sampling type weighting where the number of particles used for
 weight computations is proportional to the length of the jump chain block.}
 
@@ -77,7 +77,7 @@ is done for transformed parameters with internal_theta = log(theta).}
 \item{end_adaptive_phase}{If \code{TRUE}, S is held fixed after the burnin period. Default is \code{FALSE}.}
 
 \item{local_approx}{If \code{TRUE} (default), Gaussian approximation needed for
-importance sampling is performed at each iteration. If false, approximation is updated only
+importance sampling is performed at each iteration. If \code{FALSE}, approximation is updated only
 once at the start of the MCMC.}
 
 \item{threads}{Number of threads for state simulation.}
